# events_rust

./: Cargo.toml  README.md
configuration/: base.yaml
migrations/: 20240727102141_create_events_table.sql
scripts/: init_db.sh
src/: application.rs  configuration.rs  lib.rs  main.rs  telemetry.rs
src/routes/: events.rs  health_check.rs  mod.rs
src/util/: SnowflakeCreator.rs  mod.rs
tests/: events_test.rs  helpers.rs  main.rs  snowflake_creator_test.rs
