[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "basic_events"

[package]
name = "events"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
serde = "1"
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
config = { version = "0.14.0", default-features = false, features = ["yaml"] }
log = "0.4"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3" , features = ["registry", "env-filter"]}
tracing-actix-web = "0.7"
tracing-log = "0.2"
tracing-bunyan-formatter = "0.3"
anyhow = "1.0"
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "4"
serde_qs = "0.13"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }

[dev-dependencies]
once_cell = "1.7.2"